# recursive-character-text-splitter

./: .gitignore  README.md  pyproject.toml
recursive_character_text_splitter/: recursive_character_text_splitter.py
tests/: 0_test.py
tests/data/: QA_2.txt
